# devsec-scanner

./: .coverage  .env.example  .gitignore  DEVLOG.md  Dockerfile  README.md  __init__.py  action.yml  docker-compose.yml  github-app-manifest.json  main_cli.py  main_scanner.py  pyproject.toml  requirements.txt  scanner.py  setup.py
.github/: copilot-instructions.md
.github/workflows/: security-scan.yml
ai/: __init__.py
cli/: cli.py  scanner
deploy/: README.md  docker-healthcheck.sh  integration-test.sh  scanner-config.example.yml
docs/: CONFIG.md  DEPLOYMENT.md  USAGE.md  installation.md
scanners/: __init__.py
scripts/: bump_version.py  setup.sh
src/devsec_scanner/: __init__.py  cli.py  main.py  scanner_ai.py
src/devsec_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/devsec_scanner/ai/: ai_assistant.py  ai_cache.py  ai_client.py  ai_explanations.py  ai_prompts.py  ai_risk_assessor.py
src/devsec_scanner/config/: config_manager.py  settings.py
src/devsec_scanner/github/: app_config.py  branch_protection.py  github_api.py  github_app.py  github_workflow.py  marketplace_prep.py  pr_commenter.py  webhook_handler.py
src/devsec_scanner/reports/: compliance_checker.py  consolidated_reporter.py  enhanced_reporter.py  export_manager.py  html_reporter.py  json_reporter.py  report_assets.py  report_comparison.py  report_metadata.py  report_schema.py  s3_reporter.py  security_scorer.py  severity_classifier.py
tests/: __init__.py  test_cli.py  test_scanners.py
utils/: __init__.py
(+26 files in other folders)
